loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:4: error: not found: value buggle
if (buggle>=3) {
    ^