loopdowhile.Poucet2.scala.code
do {
  forward() ; var buggle = 0 ; buggle = buggle + 1 ;
} while (!crossing())
if (buggle>=3) {
  left() ;
}
else right() ;
if (exitReached()) {
  forward() ;
}